--- a/src/GanttComponents/Shared/MainLayout.razor
+++ b/src/GanttComponents/Shared/MainLayout.razor
@@ -1,4 +1,5 @@
 ﻿@inherits LayoutComponentBase
+@using GanttComponents.Components.LanguageSelector
 
 <PageTitle>GanttComponents</PageTitle>
 
@@ -9,7 +10,12 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            <div class="top-row-left">
+                <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            </div>
+            <div class="top-row-right">
+                <LanguageSelector />
+            </div>
         </div>
 
         <article class="content px-4">
@@ -17,3 +23,8 @@
         </article>
     </main>
 </div>
+
+@code {
+    // No more cascading parameter management needed!
+    // Each component manages its own I18N subscription via dependency injection
+}
