--- a/src/GanttComponents/_Imports.razor
+++ b/src/GanttComponents/_Imports.razor
@@ -12,4 +12,6 @@
 @using GanttComponents.Services
 @using GanttComponents.Components.TaskGrid
 @using GanttComponents.Components.TimelineView
+@using GanttComponents.Components.TimelineZoomControls
+@using GanttComponents.Components.GanttComposer
 @using GanttComponents.Shared
